--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <% for (var i in htmlWebpackPlugin.options.cdn && htmlWebpackPlugin.options.cdn.css) { %>
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" />
     <% } %>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1844025_nz1vhdznc4n.css" />
+
+    </style>"
   </head>
   <body>
     <noscript>
